tests/41_pipes.test
# Release A: the pipe family — ~> (elementwise), |>> (tee), fan-out.
# ~> is map-the-primitive: bare callable form
[1, 2, 3] ~> (fn x -> x * 10)
=> [10, 20, 30]
# '@' under ~> binds the ELEMENT
1:5 ~> (@ ^ 2)
=> [1, 4, 9, 16, 25]
# chains left-associatively into |>
1:5 ~> (@ ^ 2) |> sum
=> 55
# consecutive elementwise stages
[0.5, 1.5, 2.5] ~> (@ * 2) ~> floor
=> [1, 3, 5]
# shadowing the name 'map' cannot break the operator
let map = 7; [1, 2] ~> (@ + 1)
=> [2, 3]
# '@' inside a nested fn under ~> is the element, lexically captured
[1, 2, 3] ~> (fn x -> x + 0) |> sum
=> 6
# tee prints the flowing value (final result suppressed with ';')
[3, 1, 2] |>> sort |> max;
=> [3, 1, 2]
# tee composes with the @-form
[4, 5] |>> (@ * 10);
=> [4, 5]
# fan-out: record literal of callables applied to the piped value
[1, 2, 3, 4] |> {n = length, mu = mean, top = max}
=> {n = 4, mu = 2.5, top = 4}
# fan-out fields may be lambdas
[1, 2, 3] |> {s = fn v -> sum(v) * 10}
=> {s = 60}
# tee + fan-out
[9, 8] |>> {n = length};
=> [9, 8]
# non-callable fan-out field is a type error
[1, 2] |> {bad = 5}
=> !not callable
# '@' in a fan-out record is rejected
[1, 2] |> {a = @}
=> !fan-out record cannot use '@'
# ~> does not fan out
[1, 2] ~> {a = length}
=> !cannot fan out
# ~> on a non-array follows map's own rules
5 ~> (@ + 1)
=> !map
